--- a/docker/mobile/Dockerfile
+++ b/docker/mobile/Dockerfile
@@ -4,3 +4,9 @@ RUN apk update \
     && apk upgrade \
     && apk add nano \
     && rm /var/cache/apk/*
+
+RUN yarn global add expo-cli
+
+COPY ./scripts /scripts-app
+
+WORKDIR /app
