--- a/api/package.json
+++ b/api/package.json
@@ -16,8 +16,10 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.37"
+    "typeorm": "^0.2.37",
+    "yup": "^0.32.9"
   }
 }
