ENV-DOCKER: Corrigido .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 */*
 
-!docker/api
-!docker/mobile
-!.editorconfig
-!.gitignore
-!.gitkeep
-!docker-compose.yaml
-!README.md
+!/docker/api
+!/docker/mobile
+!/.editorconfig
+!/.gitignore
+!/.gitkeep
+!/docker-compose.yaml
+!/README.md
