--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "expo": "~42.0.1",
+    "expo-image-picker": "~10.2.2",
     "expo-secure-store": "~10.2.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
