--- a/app.json
+++ b/app.json
@@ -17,15 +17,13 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.nathanreis.ftttcc"
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      },
-      "package": "com.nathanreis.ftttcc"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
