--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-navigation/material-bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
+    "@types/mime": "^2.0.3",
+    "axios": "^0.22.0",
     "expo": "~42.0.1",
     "expo-barcode-scanner": "~10.2.2",
     "expo-camera": "~11.2.2",
@@ -19,6 +21,7 @@
     "expo-image-picker": "~10.2.2",
     "expo-secure-store": "~10.2.0",
     "expo-status-bar": "~1.0.4",
+    "mime": "^2.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
