--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@react-navigation/stack": "^6.0.7",
     "@types/mime": "^2.0.3",
     "axios": "^0.22.0",
+    "babel-plugin-inline-dotenv": "1.3.*",
+    "dotenv": "^16.0.0",
     "expo": "~42.0.1",
+    "expo-auth-session": "~3.3.1",
     "expo-barcode-scanner": "~10.2.2",
     "expo-camera": "~11.2.2",
     "expo-dev-client": "^0.5.1",
     "expo-image-picker": "~10.2.2",
+    "expo-random": "~11.2.0",
     "expo-secure-store": "~10.2.0",
     "expo-status-bar": "~1.0.4",
     "mime": "^2.5.2",
