--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-barcode-mask": "^1.2.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-mask-input": "^1.2.0",
     "react-native-mlkit-ocr": "^0.2.3",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
