--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@react-navigation/material-bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
-    "@types/mime": "^2.0.3",
     "axios": "^0.22.0",
     "babel-plugin-inline-dotenv": "1.3.*",
     "dotenv": "^16.0.0",
@@ -46,9 +45,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/mime": "^2.0.3",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "typescript": "~4.0.0"
   },
-  "private": true
+  "private": false
 }
