--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~42.0.1",
     "expo-auth-session": "~3.3.1",
     "expo-barcode-scanner": "~10.2.2",
+    "expo-checkbox": "~1.0.3",
     "expo-dev-client": "^0.5.1",
     "expo-image-picker": "~10.2.2",
     "expo-random": "~11.2.0",
