--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-native-barcode-mask": "^1.2.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-mask-text": "^0.7.0",
-    "react-native-paper": "^4.9.2",
+    "react-native-paper": "^4.12.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
@@ -46,6 +46,7 @@
     "@types/mime": "^2.0.3",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-vector-icons": "^6.4.10",
     "typescript": "~4.0.0"
   },
   "license": "MIT",
