--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-secure-store": "~10.2.0",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.2",
+    "fiction-expo-restart": "^1.1.2",
     "lottie-ios": "3.2.*",
     "lottie-react-native": "5.0.*",
     "mime": "^2.5.2",
