--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "victory-native": "^36.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
