Cria gráfico de produtos mais consumidos

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/slider": "3.0.3",
     "@react-native-picker/picker": "1.16.1",
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
