--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,16 @@
 version: "3.8"
 
 services:
-  api:
-    build:
-      context: ./docker/api
-    container_name: tcc_api
-    ports:
-      - 3000:3000
-    volumes:
-      - ./api:/app
-    working_dir: /app
-    command: sh /scripts-app/setup.sh
-
+  # api:
+  #   build:
+  #     context: ./docker/api
+  #   container_name: tcc_api
+  #   ports:
+  #     - 3000:3000
+  #   volumes:
+  #     - ./api:/app
+  #   working_dir: /app
+  #   command: sh /scripts-app/setup.sh
   ocr:
     build:
       context: ./docker/ocr
@@ -22,17 +21,16 @@ services:
       - ./ocr:/app
     working_dir: /app
     command: sh /scripts-app/setup.sh
-
-  mobile:
-    build:
-      context: ./docker/mobile
-    container_name: tcc_mobile
-    depends_on:
-      - api
-      - ocr
-    ports:
-      - 19000:19000
-    volumes:
-      - ./mobile:/app
-    working_dir: /app
-    command: sh /scripts-app/setup.sh
+  # mobile:
+  #   build:
+  #     context: ./docker/mobile
+  #   container_name: tcc_mobile
+  #   depends_on:
+  #     - api
+  #     # - ocr
+  #   ports:
+  #     - 19000:19000
+  #   volumes:
+  #     - ./mobile:/app
+  #   working_dir: /app
+  #   command: sh /scripts-app/setup.sh
